[gd_scene load_steps=14 format=3 uid="uid://dg2nx11vaphtq"]

[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="1_yxgeh"]
[ext_resource type="Script" path="res://scripts/menus/settings_menu/settings_menu.gd" id="2_qauny"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://themes/title_text_theme.tres" id="3_321yr"]
[ext_resource type="Theme" uid="uid://c4x43hephx6al" path="res://themes/list_item_panel/list_item_panel_theme.tres" id="4_20kul"]
[ext_resource type="PackedScene" uid="uid://blu80jv4lucvh" path="res://prefabs/ui/settings/settings_general_section.tscn" id="6_o3fah"]
[ext_resource type="PackedScene" uid="uid://cd7nav8wrqxc1" path="res://prefabs/ui/settings/settings_controls_section.tscn" id="6_pggia"]
[ext_resource type="PackedScene" uid="uid://cmh0663np3wdv" path="res://prefabs/ui/settings/settings_audio_section.tscn" id="7_51o1i"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="8_ov783"]
[ext_resource type="PackedScene" uid="uid://cyjyqhebj5ril" path="res://prefabs/ui/settings/game_logs_panel.tscn" id="9_rp4sj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yj8xg"]

[sub_resource type="ButtonGroup" id="ButtonGroup_dlwjt"]

[sub_resource type="ButtonGroup" id="ButtonGroup_vp8pu"]

[sub_resource type="ButtonGroup" id="ButtonGroup_3msis"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_yxgeh")
script = ExtResource("2_qauny")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_yj8xg")

[node name="SettingsTitle" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -152.0
offset_top = 12.0
offset_right = 153.0
offset_bottom = 62.0
grow_horizontal = 2
theme = ExtResource("3_321yr")
bbcode_enabled = true
text = "[center]Settings[/center]"
fit_content = true

[node name="SubHeadingTitle" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 65.0
offset_right = 150.0
offset_bottom = 114.0
grow_horizontal = 2
theme = ExtResource("3_321yr")
theme_override_font_sizes/bold_italics_font_size = 28
theme_override_font_sizes/italics_font_size = 28
theme_override_font_sizes/mono_font_size = 28
theme_override_font_sizes/normal_font_size = 28
theme_override_font_sizes/bold_font_size = 28
bbcode_enabled = true
text = "[center]Controls[/center]"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 66.0
offset_top = -226.0
offset_right = 366.0
offset_bottom = 328.0
grow_vertical = 2
theme_override_constants/separation = 8

[node name="BackButton" parent="Panel/VBoxContainer" instance=ExtResource("8_ov783")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_neighbor_top = NodePath("../AudioButton")
text = "Back"

[node name="GeneralButton" parent="Panel/VBoxContainer" instance=ExtResource("8_ov783")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_dlwjt")
text = "General"

[node name="ControlsButton" parent="Panel/VBoxContainer" instance=ExtResource("8_ov783")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_vp8pu")
text = "Controls"

[node name="AudioButton" parent="Panel/VBoxContainer" instance=ExtResource("8_ov783")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_neighbor_bottom = NodePath("../GameLogsButton")
toggle_mode = true
button_group = SubResource("ButtonGroup_3msis")
text = "Audio"

[node name="GameLogsButton" parent="Panel/VBoxContainer" instance=ExtResource("8_ov783")]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_neighbor_bottom = NodePath("../BackButton")
text = "Game Logs"

[node name="SubsectionPanel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 398.0
offset_top = 108.0
offset_right = -40.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_20kul")

[node name="GeneralSection" parent="Panel/SubsectionPanel" node_paths=PackedStringArray("sectionToggleButton") instance=ExtResource("6_o3fah")]
visible = false
layout_mode = 1
sectionToggleButton = NodePath("../../VBoxContainer/GeneralButton")

[node name="DeadzoneRangeLabel" parent="Panel/SubsectionPanel/GeneralSection/Control/VBoxContainer/DeadzoneControl" index="1"]
offset_right = 308.0

[node name="DeadzoneRangeLabel2" parent="Panel/SubsectionPanel/GeneralSection/Control/VBoxContainer/DeadzoneControl" index="2"]
offset_right = 505.0

[node name="WindowLabel" parent="Panel/SubsectionPanel/GeneralSection/Control/VBoxContainer/WindowControl" index="0"]
offset_right = 463.0

[node name="WindowOptionsButton" parent="Panel/SubsectionPanel/GeneralSection/Control/VBoxContainer/WindowControl/WindowLabel" index="1"]
offset_left = -163.0

[node name="FramerateLabel" parent="Panel/SubsectionPanel/GeneralSection/Control/VBoxContainer/FramerateControl" index="0"]
offset_right = 434.0

[node name="FramerateLineEdit" parent="Panel/SubsectionPanel/GeneralSection/Control/VBoxContainer/FramerateControl/FramerateLabel" index="1"]
offset_left = -110.0

[node name="ItemConfirmPanel" parent="Panel/SubsectionPanel/GeneralSection" index="1"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.471
anchor_top = -0.24
anchor_right = 1.048
anchor_bottom = 1.058
offset_left = -0.417999
offset_top = -0.0399933
offset_right = -1279.42
offset_bottom = -719.132

[node name="ControlsSection" parent="Panel/SubsectionPanel" node_paths=PackedStringArray("sectionToggleButton") instance=ExtResource("6_pggia")]
layout_mode = 1
offset_top = 3.0
sectionToggleButton = NodePath("../../VBoxContainer/ControlsButton")

[node name="AudioSection" parent="Panel/SubsectionPanel" instance=ExtResource("7_51o1i")]
visible = false
layout_mode = 1

[node name="LogsPanel" parent="." instance=ExtResource("9_rp4sj")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="Panel/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="Panel/VBoxContainer/GeneralButton" to="." method="_on_general_button_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/ControlsButton" to="." method="_on_controls_button_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/AudioButton" to="." method="_on_audio_button_toggled"]
[connection signal="pressed" from="Panel/VBoxContainer/GameLogsButton" to="." method="_on_game_logs_button_pressed"]
[connection signal="back_pressed" from="LogsPanel" to="." method="_on_logs_panel_back_pressed"]

[editable path="Panel/SubsectionPanel/GeneralSection"]
